# RoboExplore

./: .gitignore  README.md  config.py  make.py  server.py
doc/: Core.md  GameIdeas.md  IdeasForInputs.md  core.md
rust/: Cargo.toml
rust/src/: bullet.rs  camera.rs  color.rs  display_buffer.rs  display_text.rs  display_texture.rs  externals.rs  game.rs  gamepad.rs  geo.rs  keyboard.rs  lib.rs  mouse.rs  player.rs  static_singletons.rs  tiled.rs  tiled_display.rs  tiled_geometry.rs
rust/src/geo/: asserts.rs  bounds2.rs  circle.rs  collider.rs  collision_system.rs  common.rs  consts.rs  line.rs  line_segment.rs  mat4.rs  polygon.rs  range.rs  vec2.rs  vec3.rs
site/: index.css  index.html  index.js  player.aseprite  room.json  room.tmx  roomTiles.aseprite  test.aseprite  tests.html
tests/: example.ts  tsconfig.json
typescript/: display.ts  game.ts  input.ts  textDisplay.ts  tiledFileLoader.ts  tsconfig.json
