[package]
name = "rust"
version = "0.1.0"
authors = ["aaron-human <59424745+aaron-human@users.noreply.github.com>"]
edition = "2018"
description = "An example Rust -> WASM game template."
license = "BSD 3-Clause License"

#repository = "https://github.com/" TODO!

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
auto_ops = "0.1.0"
